--- a/client/views/review.html
+++ b/client/views/review.html
@@ -1,6 +1,6 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='#/dash' class='brand-logo'><img class='logo' src='../images/Fleetkeep-logo.png' /></a>
+    <a href='#/dash' class='brand-logo'>FleetKeep</a>
     <ul class='right'>
       <li>
         <a href='#'>Settings</a>
