--- a/client/views/dash.html
+++ b/client/views/dash.html
@@ -1,6 +1,6 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='#/' class='brand-logo'>FleetKeep</a>
+    <a href='#/' class='brand-logo'><img class='logo' src='../images/Fleetkeep-logo-white.png' /></a>
     <ul class='right'>
       <li class='nav-link'>
         <a href='#'>Out of Service Trucks</a>
