--- a/client/views/driver.html
+++ b/client/views/driver.html
@@ -1,6 +1,6 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='#/driver' class='brand-logo'>FleetKeep</a>
+    <a href='#/' class='brand-logo'><img class='logo' src='../images/Fleetkeep-logo-white.png' /></a>
     <ul class='right'>
       <li ng-click='ctrl.logout()'>
         <a href='#'>Logout</a>
