--- a/client/views/report.html
+++ b/client/views/report.html
@@ -235,7 +235,7 @@
 </div>
 <div class='row'>
   <button ng-click='ctrl.submitReport(report)' class="waves-effect waves-light btn-large col s2 offset-s3">Submit</button>
-  <a ng-href='#/dash' class="waves-effect waves-light btn-large col s2 offset-s1">Cancel</a>
+  <a ng-click='ctrl.cancel()' class="waves-effect waves-light btn-large col s2 offset-s1">Cancel</a>
 </div>
 <footer class='row'>
   <p class='col s1 offset-s5'>
