--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,10 +1,10 @@
 <div class='home-body row'>
-  <div class='container homies col s8'>
+  <div class='home-info container col s8'>
     <div class='row'>
       <h1 class='home-title col s10'>FleetKeep</h1>
     </div>
     <div class='row'>
-      <p class='flow-text col s8 home-info'>
+      <p class='flow-text col s8'>
         FleetKeep is the vehicle fleet management application designed to simplify your vehicle reporting. Our simple reporting and administrative dashboard views allow for both drivers and supervisors to access and input the necessary data to get your fleet on the street.
       </p>
     </div>
